--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -46,6 +46,7 @@
 .movies-buttons-container{
     display: flex;
     justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     width: 300px;
 }
@@ -57,8 +58,8 @@
 }
 
 .play-button-icon{
-    padding:0px;
-    margin:0px;
+    padding:8px;
+    margin:8px;
     color: gold;
     font-size: 3rem;
     transition: 0.3s;
@@ -69,6 +70,21 @@
     font-size: 4rem;
     color: white;
 }
+
+.review-button{
+    padding:8px;
+    margin:8px;
+    /* transition: 0.3s;
+    cursor: pointer; */
+}
+
+.review-button:hover{
+    font-size: 1.3rem;
+    color: white;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
 
 @media only screen and (max-width: 768px){
     .movie-detail{
